<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>sauvc26_world</name>
  <version>0.4.0</version>
  <description>SAUVC 2026 World Simulation in Gazebo Harmonic</description>

  <maintainer email="fawwasaliy11@gmail.com">Aliy</maintainer>
  <license>MIT</license>

  <author>FechL</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
